# 3d-software-rendering

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c
src/goop/: goop.c  goop.h  goop_core.c  goop_log.c
